deployment/stage3/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eks-demo-app
  name: eks-demo-app-service
  namespace: eks-demo-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: eks-demo-app
  sessionAffinity: None
  type: ClusterIP
