deployment/stage3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-app-ingress
  labels:
    app: eks-demo-app
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-demo-group
    # IPv6, zie notities in README in eks-demo-infra
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/subnets: subnet-0fc025155115d3ca9, subnet-0f1f930cfb2b3909d  #, subnet-08991736d58ec2e49
    # SSL
    external-dns.alpha.kubernetes.io/hostname: dev.liberaalgeluid.nl, acc.liberaalgeluid.nl, test.liberaalgeluid.nl
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:${AWS_ACCOUNT_ID}:certificate/6776643f-a45b-47a9-97c7-f8999fb3ce61
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
  namespace: eks-demo-app
spec:
  rules:
    - host: dev.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    - host: acc.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    - host: test.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    # Deze catchall uitgeschakeld omdat ook prometheus.liberaalgeluid.nl bestaat
    # Probleem is dat je niet kunt voorkomen dat deze als eerste geladen worden,
    # Dan staat deze rule voor de prometheus en grafana rule
#    - http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: eks-demo-app-service
#                port:
#                  number: 8080
