deployment/stage3/spring-boot-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eks-demo-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1.0.0"
  labels:
    app: eks-demo-app-deployment
  name: eks-demo-app-deployment
  namespace: eks-demo-app
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: eks-demo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: eks-demo-app
    spec:
      containers:
        - name: kubernetes-eks-demo-app
          image: enschede/eks-demo-app:sprint1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 768Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eks-demo-app
  name: eks-demo-app-service
  namespace: eks-demo-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: eks-demo-app
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-app-ingress
  labels:
    app: eks-demo-app
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: my-group
    # SSL
    external-dns.alpha.kubernetes.io/hostname: dev.liberaalgeluid.nl, acc.liberaalgeluid.nl, test.liberaalgeluid.nl
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:${AWS_ACCOUNT_ID}:certificate/6776643f-a45b-47a9-97c7-f8999fb3ce61
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
  namespace: eks-demo-app
spec:
  rules:
    - host: dev.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    - host: acc.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    - host: test.liberaalgeluid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-demo-app-service
                port:
                  number: 8080
